GNOME Bugzilla – Bug 728888
gssdp-socket-source: Fix the destroy/unref order on a GSource
Last modified: 2019-02-22 09:29:56 UTC
This fixes a potential crash when calling g_source_destroy() on an already-freed GSource.
Created attachment 275063 [details] [review] gssdp-socket-source: Fix the destroy/unref order on a GSource g_source_destroy() should always be called before g_source_unref().
Review of attachment 275063 [details] [review]: +1
Attachment 275063 [details] pushed as 50cd3e9 - gssdp-socket-source: Fix the destroy/unref order on a GSource