gssdp-socket-source: Fix the destroy/unref order on a GSource

g_source_destroy() should always be called before g_source_unref().

https://bugzilla.gnome.org/show_bug.cgi?id=728888